Worked on function and test, need to connect them

--- a/product.html
+++ b/product.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Ryans Whisky Bar</h1>
+        <h1>Ryans Whiskey Bar</h1>
         <nav>
             <a href="../">Home</a>
             <a href="products">Buy Booze</a>
@@ -18,8 +18,8 @@
     </header>
 
     <main>
-        <h2>Whisky</h2>
-        <ul id="whisky"></ul>
+        <h2>Whiskey</h2>
+        <ul class="whiskey" id="whiskey"></ul>
     </main>
 
     <script src="products.js" type="module"></script>
