--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <p>
                 <a href="product.html">Buy Booze</a>
             </p>
+            <p>
+                <a href="cart.html">View you Shopping Cart</a>
+            </p>
         </section>    
     </main>
     
