--- a/product.html
+++ b/product.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fruit Stand Products</title>
-    <link rel="stylesheet" href="../common/main.css">
-    <link rel="stylesheet" href="products.css">
+    
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
@@ -22,6 +22,6 @@
         <ul class="whiskey" id="whiskey"></ul>
     </main>
 
-    <script src="products.js" type="module"></script>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
