Correct some pathing

--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
         <h1>Fruit Stand Shopping Cart</h1>
         <nav>
             <a href="../">Home</a>
-            <a href="products">Buy Booze</a>
+            <a href="product.html">View our selection</a>
             <a href="./shopping-cart"><a>Shopping Cart</a>
         </nav>
     </header>
@@ -48,3 +48,5 @@
     <script type="module" src="shopping-cart.js"></script>
 </body>
 </html>
+
+<!-- add return to products page -->
