--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <section class="centered">
             <p>
-                <a href="product.html">Buy Booze</a>
+                <a href="product.html">View out selection</a>
             </p>
             <p>
                 <a href="cart.html">View you Shopping Cart</a>
