--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
         <h1>Ryans Whiskey Bar</h1>
         <nav>
             <a href="../">Home</a>
-            <a href="products">Buy Booze</a>
+            <a href="cart.html">View Cart</a>
         </nav>
     </header>
 
@@ -25,3 +25,7 @@
     <script src="app.js" type="module"></script>
 </body>
 </html>
+
+<!-- add view cart -->
+<!-- delete buy booze -->
+
