Add to cart works w/ correct pathing

--- a/Cart-Files/cart.html
+++ b/Cart-Files/cart.html
@@ -12,8 +12,8 @@
         <h1>Fruit Stand Shopping Cart</h1>
         <nav>
             <a href="../">Home</a>
-            <a href="product.html">View our selection</a>
-            <a href="./shopping-cart"><a>Shopping Cart</a>
+            <a href="../Products/product.html">View our selection</a>
+            <a href="../Cart-Files/cart.html"><a>Shopping Cart</a>
         </nav>
     </header>
 
