Added order Event listener

--- a/Cart-Files/cart.html
+++ b/Cart-Files/cart.html
@@ -42,7 +42,7 @@
         </table>
 
         <p class="order-now-container">
-            <button>Place Order</button>
+            <button id='orderButton'>Place Order!</button>
         </p>
     </main>
 
@@ -50,4 +50,3 @@
 </body>
 </html>
 
-<!-- add return to products page -->
