--- a/Products/product.html
+++ b/Products/product.html
@@ -22,6 +22,7 @@
     </main>
 
     <script src="../app.js" type="module"></script>
+    <script src="../utils.js" type='module'></script>
 </body>
 </html>
 
