--- a/Cart-Files/cart.html
+++ b/Cart-Files/cart.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../Cart-Files/Cart.css">
     <title>Shopping Cart</title>
     
 </head>
 <body>
     <header>
-        <h1>Fruit Stand Shopping Cart</h1>
+        <h1>Ryans Whiskey Bar </h1>
         <nav>
             <a href="../">Home</a>
             <a href="../Products/product.html">View our selection</a>
