added style sheets

--- a/Products/product.html
+++ b/Products/product.html
@@ -23,6 +23,7 @@
 
     <script src="../app.js" type="module"></script>
     <script src="../utils.js" type='module'></script>
+    <!-- added this not sure if conflicting -->
 </body>
 </html>
 
