--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>Ryans Whiskey Bar</h1>
+        <h1>Ryans' Whiskey Bar</h1>
     </header>
     
     <main>
@@ -25,7 +25,11 @@
             </p>
         </section>    
     </main>
+
     
 </body>
+    <footer>
+        <h3> Thanks' for shopping with us!</h3>>
+    </footer>
 
 </html>
