--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
 </body>
     <footer>
-        <h3> Thanks' for shopping with us!</h3>>
+        <h3> Thanks' for shopping with us!</h3>
     </footer>
 
 </html>
