--- a/Cart-Files/cart.html
+++ b/Cart-Files/cart.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Ryans Whiskey Bar </h1>
+        <h1>Ryans' Whiskey Bar </h1>
         <nav>
             <a href="../">Home</a>
             <a href="../Products/product.html">View our selection</a>
