--- a/Products/product.html
+++ b/Products/product.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Ryans Whiskey Bar</h1>
+        <h1>Ryans' Whiskey Bar</h1>
         <nav>
             <a href="../index.html">Home</a>
             <a href="../Cart-Files/cart.html">View Cart</a>
