--- a/Products/product.html
+++ b/Products/product.html
@@ -12,6 +12,7 @@
         <h1>Ryans' Whiskey Bar</h1>
         <nav>
             <a href="../index.html">Home</a>
+            <a href="../Products/product.html">View our selection</a>
             <a href="../Cart-Files/cart.html">View Cart</a>
         </nav>
     </header>
@@ -25,6 +26,10 @@
     <script src="../utils.js" type='module'></script>
     <!-- added this not sure if conflicting -->
 </body>
+<footer>
+    <h3> Thanks' for shopping with us!</h3>
+</footer>
+
 </html>
 
 <!-- add view cart -->
