--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <section class="centered">
             <p>
-                <a href="./Products/product.html">View out selection</a>
+                <a href="./Products/product.html">View our selection</a>
             </p>
             <p>
                 <a href="./Cart-Files/cart.html">View you Shopping Cart</a>
